Fix white space at bottom when scroll

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,20 +2,22 @@
     box-sizing: border-box;
 }
 
-html, body {
+html {
     min-height: 100vh;
-}
-
-
+  }
 
 body {
+    position: relative;
 }
 
 .background {
-    background: url("../public/media/images/metal_rolling_background.jpg") no-repeat fixed center center / cover rgba(0, 0, 0, 0);
+    background-image: url("../public/media/images/metal_rolling_background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100%;
     left: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: -1000;    
